@@ -1,4 +1,5 @@
 ---version 2.0.4 yet to be released---
+07-dec-2008 - adelikat - win32 - turbo now employs frame skip
 30-nov-2008 - punkrockguy - commit 1000
 30-nov-2008 - punkrockguy - fixed gcc compile error
 30-nov-2008 - punkrockguy - moved around some hotkeys to be consistent with docs
